# hanazeder_python

./: Pipfile  README.md  pyproject.toml  requirements.txt  serial_hlc20.py
.github/workflows/: pytest.yml  python.yml
hanazeder/: Hanazeder.py  __init__.py  comm.py  encoding.py  read.py  types.py
tests/: test_comm.py  test_encoding.py  test_main.py
