# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanazeder"
version = "0.12.0"
description = "Library and utils to read sensor data from Hanazeder FP heating pumps"
readme = "README.md"
authors = [{ name = "Kevin Read", email = "me@kevin-read.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console"
]
keywords = ["heating", "smart home", "hanazeder", "pump"]
dependencies = [
    "crccheck",
    "pyserial",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "build", "twine", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/unverbraucht/serial_hanazeder"

[project.scripts]
hanazeder_read = "hanazeder.read:main"

[tool.bumpver]
current_version = "0.12.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

